fix jumping behavior on bookmarks panel

--- a/core-web/apps/dotcms-ui/src/app/portlets/dot-pages/dot-pages-listing-panel/dot-pages-listing-panel.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/portlets/dot-pages/dot-pages-listing-panel/dot-pages-listing-panel.component.scss
@@ -1,7 +1,6 @@
 @use "variables" as *;
 
 :host {
-    flex-grow: 1;
     margin-bottom: $spacing-4;
 }
 
